# ComfyUI-MidjourneyAPI

./: .gitignore  CLAUDE.md  PreviewLocalFile.md  README.en.md  README.md  __init__.py  build_dist.py  migrate_styles_to_v7.py  node_imagine_v7_params.py  node_keyword_join.py  node_keywords.py  node_params_io.py  node_style.py  nodes.py  pyproject.toml  requirements.txt  utils.py
docs/plans/: 2026-02-21-feature-brainstorm.md  2026-02-22-enqueue-mode.md
keywords/: art_style.txt  camera_effect.txt  color_tone.txt  lighting.txt  mood.txt
mj/keywords/architecture/: architectural_style.txt  building_type.txt  interior_design.txt
mj/keywords/art_style/: art_medium.txt  era_aesthetic.txt  illustration_style.txt  print_technique.txt  street_art_style.txt
mj/keywords/character/: facial_expression.txt  fashion_clothing.txt  hair_style.txt  makeup_style.txt  subject_pose.txt
mj/keywords/color/: color_grading.txt  color_palette.txt
mj/keywords/culture/: artist_reference.txt  cultural_aesthetic.txt  cultural_ritual.txt  genre_narrative.txt  music_genre_aesthetic.txt  mythological_theme.txt
mj/keywords/digital_fx/: dimensionality.txt  game_art_style.txt  glitch_aesthetic.txt  particle_effects.txt  render_engine.txt  vfx_style.txt
mj/keywords/environment/: celestial.txt  environment.txt  natural_landscape.txt  season.txt  underwater_scene.txt  urban_setting.txt  weather.txt
mj/keywords/lighting/: lighting_setup.txt  (+1 more)
nodes/: __init__.py  const.py  generation.py  keyword_join.py  keyword_random.py  keywords.py  params.py  style.py
web/: autoconnect.js  style_preview.js
(+22 files in other folders)
