[project]
name = "comfyui-midjourney"
version = "0.1.0"
description = "ComfyUI custom nodes for Midjourney image generation"
readme = {file = "README.md", content-type = "text/markdown; charset=UTF-8"}
license = "MIT"
dependencies = ["midjourney-api @ git+https://github.com/JuyeongYi/PythonMidjourneyAPIClient.git", "python-dotenv"]

[tool.comfy]
web = "web"
